Able to add a Customer. Data at least is affected in SQL.

--- a/PPBL/PPBL.csproj
+++ b/PPBL/PPBL.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PPModels\PPModels.csproj" />
+    <ProjectReference Include="..\PPDL\PPDL.csproj" />
   </ItemGroup>
 
 </Project>
