--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 
+appsettings.json
 # Created by https://www.toptal.com/developers/gitignore/api/vscode,visualstudio,visualstudiocode,windows,csharp,dotnetcore
 # Edit at https://www.toptal.com/developers/gitignore?templates=vscode,visualstudio,visualstudiocode,windows,csharp,dotnetcore
 
